align items in correct order

--- a/02/styles/global.css
+++ b/02/styles/global.css
@@ -1,26 +1,40 @@
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
-.a, .b, .c {
-    border: 3px solid transparent;
-    min-height: 50px;
+.a,
+.b,
+.c {
+	border: 3px solid transparent;
+	min-height: 50px;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+	display: flex;
+	justify-content: center;
+	align-items: center;
 }
 
 .a {
-    border-color: #ffffba
+	border-color: #ffffba;
+    grid-area:a;
 }
 
 .b {
-    border-color: #ffdfba;
+	border-color: #ffdfba;
+       grid-area:b;
 }
 
 .c {
-    border-color: #baffc9;
+	border-color: #baffc9;
+       grid-area:c;
+}
+
+body {
+	display: grid;
+	grid-template-areas:
+		".a"
+		".b"
+		".c";
+	height: 50vh;
 }
